Set RootDomainObject in objects constructor.